# cottagepy

./: .flake8  Makefile  README.md  pyproject.toml
src/cottagepy/: __init__.py  __main__.py  _log.py  database.py  documents.py  modules.py  patch.py  repl.py  requirements.py
src/test/: conftest.py  test_app.py  test_cottage.py  test_documents.py  test_load_module.py  test_req.py
