[project]
name = "cottagepy"
version = "0.0.1"
description = "Framework for interactive from-within application development"
readme = "README.md"
authors = [
    { name = "Benoit Hamelin", email = "benoit@benoithamelin.com" }
]
maintainers = [{name = "Benoit Hamelin", email = "benoit.hamelin@gmail.com"}]
requires-python = ">=3.11"
keywords = ["ipython", "development", "fromwithin"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hamelin/cottagepy"

[project.scripts]
cottagepy = "cottagepy.__main__:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "mypy-extensions>=1.1.0",
    "pytest>=9.0.2",
    "python-lsp-server>=1.14.0",
    "yapf>=0.43.0",
]

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_lambdas = true
allow_split_before_default_or_named_assigns = true
arithmetic_precedence_indication = true
blank_lines_around_top_level_definition = 2
blank_lines_between_top_level_imports_and_variables = 2
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 99
continuation_indent_width = 4
dedent_closing_brackets = true
disable_ending_comma_heuristic = false
disable_split_list_with_comment = false
each_dict_entry_on_separate_line = false
force_multiline_dict = false
indent_closing_brackets = false
indent_dictionary_value = false
indent_width = 4
join_multiple_lines = false
spaces_around_default_or_named_assign = false
spaces_around_dict_delimiters = false
spaces_around_list_delimiters = false
spaces_around_power_operator = false
spaces_around_subscript_colon = false
spaces_around_tuple_delimiters = false
spaces_before_comment = 2
space_between_ending_comma_and_closing_bracket = false
space_inside_brackets = false
split_all_comma_separated_values = false
split_all_top_level_comma_separated_values = true
split_arguments_when_comma_terminated = true
split_before_arithmetic_operator = true
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = true
